# jrimage

./: CMakeLists.txt  Design  README.md  api.md  goals.md
benchmarks/: jrimage_benchmarks.cc  main_benchmarks.cc  mem_utils_benchmarks.cc
include/: compile_time_matrix_mul.h  jrimage.h  jrimage_allocators.h  jrimage_color.h  matrix_3x3.h
src/: jrimage.cc  jrimage_color.cc  main.cc  math_utils.h  mem_utils.cc  mem_utils.h  srgb_utils.h  template_utils.h
tests/: colors_tests.cc  compile_time_matrix_mul_tests.cc  jrimage_allocator_tests.cc  jrimage_tests.cc  main_unit_tests.cc  math_utils_tests.cc  matrix_3x3_tests.cc  mem_utils_tests.cc
